syntax = "proto3";

package api.grpc.spring.boot.user;

option java_multiple_files = true;
option java_package = "api.grpc.spring.boot.user";

service UserService {
  rpc GetUserByLogin(GetUserByLoginRequest) returns (UserResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc UploadFileAndString(UploadImageUserRequest) returns (UploadImageUserResponse);
}

message GetUserByLoginRequest {
  string login = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string login = 4;
  string password = 5;
  string role = 6;
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string login = 3;
  string password = 4;
  string role = 5;
}

message RegisterUserResponse {
  string message = 1;
}

message UploadImageUserRequest {
  string message = 1;
  bytes file = 2;
}

message UploadImageUserResponse {
  string status = 1;
  string details = 2;
  bytes file = 3;
}